--- a/packages/cosmos-ui/package.json
+++ b/packages/cosmos-ui/package.json
@@ -19,29 +19,32 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
-    "@storybook/addon-docs": "^5.3.9",
-    "@storybook/addon-knobs": "^5.3.12",
-    "@storybook/vue": "^5.3.12",
+    "@storybook/addon-docs": "^6.5.12",
+    "@storybook/addon-knobs": "^6.4.0",
+    "@storybook/theming": "^6.5.12",
+    "@storybook/vue": "^6.5.12",
     "babel-loader": "^8.0.6",
     "babel-preset-vue": "^2.0.2",
     "css-loader": "^3.4.2",
-    "storybook-addon-vue-info": "^1.4.1",
+    "storybook-addon-vue-info": "^1.4.2",
     "style-loader": "^1.1.3",
+    "vue-docgen-loader": "^2.0.0",
     "vue-loader": "^15.9.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11"
   },
   "dependencies": {
-    "markdown-it": "^10.0.0",
+    "algoliasearch": "^4.1.0",
     "axios": "^0.21.1",
     "clipboard-copy": "^3.1.0",
-    "algoliasearch": "^4.1.0",
     "fuse.js": "^3.4.6",
     "hotkeys-js": "^3.7.3",
-    "lodash": "^4.17.15",
     "js-base64": "^2.5.2",
+    "lodash": "^4.17.15",
+    "markdown-it": "^10.0.0",
     "prismjs": "^1.19.0",
     "querystring": "^0.2.0",
+    "react": "^18.2.0",
     "tiny-cookie": "^2.3.1",
     "vue": "^2.6.10"
   }
