--- a/packages/vuepress-theme-cosmos/package.json
+++ b/packages/vuepress-theme-cosmos/package.json
@@ -4,6 +4,7 @@
   "description": "Theme for VuePress static site generator used by Nibiru, Tendermint, and Cosmos projects.",
   "main": "index.js",
   "scripts": {
+    "build": "",
     "postversion": "git push && git push --tags"
   },
   "repository": {
