--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -3,6 +3,8 @@ name: ⛓️ Tests
 on: 
   pull_request:
     branches: ["main", "release/*"]
+  push:
+    branches: ["main"]
   
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}-${{ github.head_ref }}
