--- a/packages/vuepress-theme-cosmos/package.json
+++ b/packages/vuepress-theme-cosmos/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nibiruchain/vuepress-theme-cosmos",
   "version": "0.0.183",
-  "description": "Theme for VuePress static site generator used by Nibiru, Tendermint, and Cosmos projects.",
+  "description": "Theme for VuePress static site generator used by Nibiru and Tendermint, and Cosmos projects.",
   "main": "index.js",
   "scripts": {
     "build": "",
@@ -22,7 +22,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@cosmos-ui/vue": "^0.35.0",
+    "@nibiruchain/cosmos-ui": "^0.0.0",
     "@vuepress/plugin-google-analytics": "1.8.2",
     "algoliasearch": "^4.2.0",
     "axios": "^0.24.0",
