Remove references to @cosmos-ui/vue

--- a/packages/vuepress-theme-cosmos/.github/dependabot.yml
+++ b/packages/vuepress-theme-cosmos/.github/dependabot.yml
@@ -10,7 +10,7 @@ updates:
   labels:
   - dependencies
   ignore:
-  - dependency-name: "@cosmos-ui/vue"
+  - dependency-name: "@nibiruchain/cosmos-ui"
     versions:
     - ">= 0"
   - dependency-name: core-js
